# KKIMAGE

./: .env.example  .gitignore  AGENTS.md  dev.bat  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  依赖安装.bat  启动开发.bat  打包发布.bat
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  image_gen.rs  lib.rs  main.rs  types.rs
src/components/: ChatWorkspace.tsx  ExpertModal.tsx  GeneratePanel.tsx  ImagePreviewModal.tsx  ImageViewer.tsx  SettingsModal.tsx  Sidebar.tsx
src/utils/: defaultExperts.ts  helpers.ts  themes.ts
